<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/done_button"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:text="@string/note_edit_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_view"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/done_button"
        android:gravity="top"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>