<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_note_button"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/list_view"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/add_note_button"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
